GET event Method is updated!
